--- a/QuranX.Web/Views/Shared/HadithView.cshtml
+++ b/QuranX.Web/Views/Shared/HadithView.cshtml
@@ -1,5 +1,6 @@
 ﻿@model QuranX.Web.Views.Shared.HadithViewModel
 @using QuranX.Web.Views.Shared
+@using QuranX.Shared.Models
 
 <div class="hadith">
 	<div class="hadith__references">
@@ -22,6 +23,27 @@
 						@reference.ToString()
 					</a>
 				</div>
+			</div>
+		}
+		@if (Model.Hadith.VerseRangeReferences.Any())
+		{
+			<div class="hadith__verse-references">
+				<div class="hadith__reference-verse-caption">
+					Related Qur'an verses
+				</div>
+				<ul class="hadith__reference-verse-numbers">
+					@foreach (VerseRangeReference verse in Model.Hadith.VerseRangeReferences)
+					{
+						string verseAsString = verse.Chapter + "." + verse.FirstVerse;
+						if (verse.IsMultipleVerses())
+						{
+							verseAsString += "-" + verse.LastVerse;
+						}
+						<li>
+							<a href="/@verseAsString">@verseAsString</a>
+						</li>
+					}
+				</ul>
 			</div>
 		}
 	</div>
