Show default texts only

--- a/QuranX.Web/Views/QuranVerses/QuranVerses.cshtml
+++ b/QuranX.Web/Views/QuranVerses/QuranVerses.cshtml
@@ -72,9 +72,18 @@
 }
 @section scripts {
 	<script>
-		function toggleTranslation(translatorCode) {
-			$(`.verse__translation[data-translator-code="${translatorCode}"`).toggle("collapse");
-			$(`.verse__translation-hidden-item[data-translator-code="${translatorCode}"`).toggle("collapse");
+
+		function toggleTranslation(translatorCode, immediateHide) {
+			var verseElem = $(`.verse__translation[data-translator-code="${translatorCode}"`);
+			var hiddenCodeElem = $(`.verse__translation-hidden-item[data-translator-code="${translatorCode}"`);
+
+			if (!immediateHide) {
+				verseElem.toggle("collapse");
+				hiddenCodeElem.toggle("collapse");
+			} else {
+				verseElem.hide();
+				hiddenCodeElem.show();
+			}
 		}
 		// Buttons to show translations
 		$(".verse__translation-hidden-item")
@@ -90,7 +99,7 @@
 			.on("click", function (ev) {
 				const elem = $(ev.target);
 				const translatorCode = elem.data("translator-code");
-				window.localStorage.removeItem(translatorCode);
+				window.localStorage.removeItem("hide-" + translatorCode);
 
 				toggleTranslation(translatorCode);
 			});
@@ -99,16 +108,26 @@
 			.each(function (index, elem) {
 				elem = $(elem.parentElement);
 				const translatorCode = elem.data("translator-code");
-				if (window.localStorage.getItem(translatorCode)) {
-					elem.hide();
+				// If this is the first visit
+				if (!window.localStorage.getItem("returnVisit")) {
+					// Hide the translation if not one of the defaults to show
+					if (["AR", "Pickthall", "SahihIntl", "YusufAli"].indexOf(translatorCode) < 0) {
+						window.localStorage.setItem("hide-" + translatorCode, true);
+					}
+				}
+				if (window.localStorage.getItem("hide-" + translatorCode)) {
+					toggleTranslation(translatorCode, true);
 				};
 			})
 			.on("click", function (ev) {
 				const elem = $(ev.target.parentElement);
 				const translatorCode = elem.data("translator-code");
-				window.localStorage.setItem(translatorCode, true);
+				window.localStorage.setItem("hide-" + translatorCode, true);
 
-				toggleTranslation(translatorCode);
+				toggleTranslation(translatorCode, true);
 			});
+		$(document).ready(function () {
+			window.localStorage.setItem("returnVisit", true);
+		});
 	</script>
 }
