--- a/QuranX.Web/Views/QuranVerses/QuranVerses.cshtml
+++ b/QuranX.Web/Views/QuranVerses/QuranVerses.cshtml
@@ -70,7 +70,7 @@
 				string containerPaddingCss = arabicCss != "" ? "arabic-container" : "";
 				<dl class="verse__translation @containerPaddingCss" data-translator-code="@translation.TranslatorCode">
 					<dt>@translation.TranslatorName</dt>
-					<dd class="@arabicCss">@translation.Text</dd>
+					<dd class="@arabicCss highlightable">@translation.Text</dd>
 				</dl>
 			}
 		</div>
