--- a/QuranX.Web/Views/SiteSearch/SiteSearch.cshtml
+++ b/QuranX.Web/Views/SiteSearch/SiteSearch.cshtml
@@ -5,7 +5,7 @@
 	ViewBag.Title = "Search";
 }
 <h1>Search</h1>
-@using (Html.BeginForm(actionName: "index", controllerName: "Search", method: FormMethod.Get))
+@using (Html.BeginForm(actionName: "index", controllerName: "SiteSearch", method: FormMethod.Get))
 {
 	<div class="search__criteria">
 		<div class="row">
