Add social meta

--- a/QuranX.Web/Views/Shared/_Layout.cshtml
+++ b/QuranX.Web/Views/Shared/_Layout.cshtml
@@ -13,9 +13,12 @@
 		window.dataLayer = window.dataLayer || [];
 		function gtag() { dataLayer.push(arguments); }
 		gtag('js', new Date());
-
 		gtag('config', 'UA-42308840-1');
 	</script>
+	<meta property="og:image" content="https://QuranX.com/Content/Images/QuranXSocialIcon.png" />
+	<meta property="og:title" content="QuranX.com The most complete Quran / Hadith / Tafsir collection available!" />
+	<meta property="og:url" content="https://QuranX.com@(Request.RawUrl)" />
+	<meta property="og:type" content="website" />
 </head>
 <body>
 	<div class="quranx navbar navbar-inverse navbar-fixed-top">
