Apple touch icons

--- a/QuranX.Web/Views/Shared/_Layout.cshtml
+++ b/QuranX.Web/Views/Shared/_Layout.cshtml
@@ -19,6 +19,15 @@
 	<meta property="og:title" content="QuranX.com The most complete Quran / Hadith / Tafsir collection available!" />
 	<meta property="og:url" content="https://QuranX.com@(Request.RawUrl)" />
 	<meta property="og:type" content="website" />
+	<link rel="apple-touch-icon" href="/Content/Images/AppleTouchIcons/apple-touch-icon-57x57.png">
+	<link rel="apple-touch-icon" sizes="72x72" href="/Content/Images/AppleTouchIcons/apple-touch-icon-72x72.png">
+	<link rel="apple-touch-icon" sizes="76x76" href="/Content/Images/AppleTouchIcons/apple-touch-icon-76x76.png">
+	<link rel="apple-touch-icon" sizes="114x114" href="/Content/Images/AppleTouchIcons/apple-touch-icon-114x114.png">
+	<link rel="apple-touch-icon" sizes="120x120" href="/Content/Images/AppleTouchIcons/apple-touch-icon-120x120.png">
+	<link rel="apple-touch-icon" sizes="144x144" href="/Content/Images/AppleTouchIcons/apple-touch-icon-144x144.png">
+	<link rel="apple-touch-icon" sizes="152x152" href="/Content/Images/AppleTouchIcons/apple-touch-icon-152x152.png">
+	<link rel="apple-touch-icon" sizes="180x180" href="/Content/Images/AppleTouchIcons/apple-touch-icon-180x180.png">
+	<link rel="icon" sizes="192x192" href="/Content/Images/AppleTouchIcons/touch-icon-192x192.png">
 </head>
 <body>
 	<div class="quranx navbar navbar-inverse navbar-fixed-top">
