--- a/QuranX.Web/Views/Shared/SelectChapterAndVerse.cshtml
+++ b/QuranX.Web/Views/Shared/SelectChapterAndVerse.cshtml
@@ -372,7 +372,7 @@
 		</div>
 	</div>
 	<div class="chapter-and-verse-selector__navigator row">
-		<div class="chapter-and-verse-selector__navigator-buttons btn-group col-xs-push-3 col-sm-push-0" role="group">
+		<div class="chapter-and-verse-selector__navigator-buttons btn-group" role="group">
 			<button id="SelectPreviousVerseNavigateButton" role="button" class="btn">&laquo; Prev</button>
 			<button id="SelectChapterAndVerseNavigateButton" role="button" class="btn">Go</button>
 			<button id="SelectNextVerseNavigateButton" role="button" class="btn">Next &raquo;</button>
