--- a/QuranX.Web/Views/Shared/SelectChapterAndVerse.cshtml
+++ b/QuranX.Web/Views/Shared/SelectChapterAndVerse.cshtml
@@ -412,7 +412,7 @@
 			var entireList = [];
 			Object.keys(versesForChapter).forEach(function (chapterNumber) {
 				versesForChapter[chapterNumber].forEach(function (verseNumber) {
-					var idToInclude = `${chapterNumber}.${verseNumber}`;
+					var idToInclude = chapterNumber + "." + verseNumber;
 					entireList.push(idToInclude);
 				});
 			});
