--- a/QuranX.Web/Content/Site.css
+++ b/QuranX.Web/Content/Site.css
@@ -55,6 +55,7 @@
 	font-weight: bold;
 	padding: 4px 0px;
 }
+
 .arabic {
 	font-size: 1.5em;
 	direction: rtl;
@@ -645,10 +646,10 @@ dl.boxed > dd {
 	margin: 0;
 }
 
-.hadith__reference-verse-numbers > li {
-	display : inline-block;
-	width: 4em;
-}
+	.hadith__reference-verse-numbers > li {
+		display: inline-block;
+		width: 4em;
+	}
 
 @media(max-width: 549px) {
 	.hadith__reference-verse-caption {
@@ -751,4 +752,18 @@ textarea {
 
 a {
 	text-decoration: underline dotted;
+}
+
+dl.about > dt {
+	font-size: 1.5em;
+	margin: 0;
+	padding: 0;
+	/*Col:H2*/
+	color: hsl(69, 41.4%, 48.8%);
+}
+
+dl.about>dd {
+	margin: 0 0 1em 0;
+	padding: 0;
+	padding-left: 1em;
 }
