--- a/QuranX.Web/Views/Shared/_Layout.cshtml
+++ b/QuranX.Web/Views/Shared/_Layout.cshtml
@@ -30,13 +30,14 @@
 				<a href="/1.1" class="quranx navbar-brand">QuranX</a>
 			</div>
 			<div class="quranx navbar-collapse collapse">
-                <ul class="quranx nav navbar-nav">
-                    <li><a href="/1.1">Quran</a></li>
-                    <li>@Html.RouteLink("Commentaries", "Commentators")</li>
-                    <li>@Html.RouteLink("Hadiths", "HadithCollections")</li>
-                    <li>@Html.RouteLink("Search", "SiteSearch")</li>
-                    <li>@Html.RouteLink("About", "About")</li>
-                </ul>
+				<ul class="quranx nav navbar-nav">
+					<li><a href="/1.1">Quran</a></li>
+					<li>@Html.RouteLink("Commentaries", "Commentators")</li>
+					<li>@Html.RouteLink("Hadiths", "HadithCollections")</li>
+					<li>@Html.RouteLink("Search", "SiteSearch")</li>
+					<li>@Html.RouteLink("Help", "Help")</li>
+					<li>@Html.RouteLink("About", "About")</li>
+				</ul>
 			</div>
 		</div>
 	</div>
