Update page titles + donation link

--- a/QuranX.Web/Views/Shared/_Layout.cshtml
+++ b/QuranX.Web/Views/Shared/_Layout.cshtml
@@ -27,7 +27,7 @@
 				<button type="button" class="quranx navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
 					MENU
 				</button>
-				<a href="/1.1" class="quranx navbar-brand">QuranX</a>
+				<a href="https://www.patreon.com/QuranX" class="quranx navbar-brand">Donate</a>
 			</div>
 			<div class="quranx navbar-collapse collapse">
 				<ul class="quranx nav navbar-nav">
