Fix URLs on About page

--- a/QuranX.Web/Views/About/About.cshtml
+++ b/QuranX.Web/Views/About/About.cshtml
@@ -11,25 +11,25 @@
 	<dd>
 		For making their word-by-word Arabic analysis open-source so that it
 		may be used by others without charge.
-		<a href="http://web.archive.org/web/20180425232144/http://quran.com/" target="_blank">Click here</a>
+		<a href="https://quran.com/" target="_blank">Click here</a>
 	</dd>
 	<dt>Tanzil project</dt>
 	<dd>
 		For providing Arabic text of the Quran and various English translations
 		and for making those resources freely available.
-		<a href="http://web.archive.org/web/20180425232144/http://tanzil.net/wiki/Resources" target="_blank">Click here</a>
+		<a href="http://tanzil.net/wiki/Resources" target="_blank">Click here</a>
 	</dd>
 	<dt>AlTafsir.com</dt>
 	<dd>
 		For giving kind permission to reproduce their tafsirs.
-		<a href="http://web.archive.org/web/20180425232144/http://altafsir.com/" target="_blank">Click here</a>
+		<a href="https://altafsir.com/" target="_blank">Click here</a>
 	</dd>
 	<dt>
 		This website is open-source
 	</dt>
 	<dd>
 		This website and its data are part of an ongoing open-source project.
-		<a href="http://web.archive.org/web/20180425232144/https://github.com/QuranX/QuranX">Click here</a>.
+		<a href="https://github.com/QuranX/QuranX" target="_blank">Click here</a>
 	</dd>
 </dl>
 
