--- a/QuranX.Web/Views/QuranVerses/QuranVerses.cshtml
+++ b/QuranX.Web/Views/QuranVerses/QuranVerses.cshtml
@@ -48,7 +48,7 @@
 				<a href="tafsirs/@verse.ChapterNumber.@verse.VerseNumber">
 					<dl class="count-and-label">
 						<dd>@verse.CommentaryCount</dd>
-						<dt>Tafirs</dt>
+						<dt>Tafsirs</dt>
 					</dl>
 				</a>
 			}
