--- a/QuranX.Web/Views/VerseAnalysis/VerseAnalysis.cshtml
+++ b/QuranX.Web/Views/VerseAnalysis/VerseAnalysis.cshtml
@@ -42,7 +42,12 @@
 					@foreach (var wordPart in word.WordParts)
 					{
 						<li class="verse-analysis__word-part">
-							@wordPart.Type -
+							<strong>@wordPart.Type</strong>
+							@if (wordPart.SubType.HasValue)
+							{
+								<em>[Form @wordPart.SubType]</em>
+							}
+							-
 							@foreach (string decorator in @wordPart.Decorators)
 							{
 								<span>@decorator</span>
