Show word forms as Roman numerals

--- a/QuranX.Web/Views/VerseAnalysis/VerseAnalysis.cshtml
+++ b/QuranX.Web/Views/VerseAnalysis/VerseAnalysis.cshtml
@@ -43,9 +43,9 @@
 					{
 						<li class="verse-analysis__word-part">
 							<strong>@wordPart.Type</strong>
-							@if (wordPart.SubType.HasValue)
+							@if (!string.IsNullOrWhiteSpace(wordPart.Form))
 							{
-								<em>[Form @wordPart.SubType]</em>
+								<em>[Form @wordPart.Form]</em>
 							}
 							-
 							@foreach (string decorator in @wordPart.Decorators)
