--- a/QuranX.Web/Views/About/About.cshtml
+++ b/QuranX.Web/Views/About/About.cshtml
@@ -24,6 +24,11 @@
 		For giving kind permission to reproduce their tafsirs.
 		<a href="https://altafsir.com/" target="_blank">Click here</a>
 	</dd>
+	<dt>Lisaan.net</dt>
+	<dd>
+		For providing Lane's Lexicon and Habib Anthony Salmone Dictionary.
+		<a href="http://lisaan.net/" target="_blank">Click here</a>
+	</dd>
 	<dt>
 		This website is open-source
 	</dt>
