--- a/QuranX.Web/Content/Site.css
+++ b/QuranX.Web/Content/Site.css
@@ -59,10 +59,12 @@
 }
 
 .arabic {
-	font-size: 1.5rem;
+	font-size: 2.5rem;
+	vertical-align: bottom;
 	direction: rtl;
 	padding: 0;
 	margin: 0;
+	margin-right: 0.5rem;
 }
 
 .verse__translation.arabic-container > dd {
